refactored some common features

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-misc-costs.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-misc-costs.html
@@ -81,7 +81,7 @@
              <td>{{item.unitcost|intcomma}}</td>
              
              <td>
-               <a href="{% url 'allifmaalcommonapp:commonPOMiscCostDetails' item.id user_var glblslug %}">
+               <a href="">
                {{item.purchase_order_misc_cost|intcomma}}
                </a>
              </td>
