--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -1,413 +1,162 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
- 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-{% if allifquery_update %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit {{allifquery_update}} Stock Item</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Category</td>
-              <td>{{form.category}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Inventory A/C</td>
-                <td>{{form.inventory_account}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Income A/C</td>
-                <td>{{form.income_account}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Pay From A/C</td>
-                <td>{{form.expense_account}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Tax Rate</td>
-                <td>{{form.taxrate}}</td>
-              </tr>
-               <tr>
-                <td class="allif-fix-table-col">Supplier Tax Rate</td>
-                <td>{{form.suppliertaxrate}}</td>
-              </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         
-              <tr>
-                <td class="allif-fix-table-col">Part Number</td>
-                <td>{{form.number}}</td>
-            
-                </tr>
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Quantity</td>
-              <td>{{form.quantity}}</td>
-          
-              </tr>
-
-              <tr>
-                <td class="allif-fix-table-col">Buying Price</td>
-                <td>{{form.buyingPrice}}</td>
-            
-                </tr>
-
-                <tr>
-                  <td class="allif-fix-table-col">Unit Cost</td>
-                  <td>{{form.unitcost}}</td>
-              
-                  </tr>
-                  
-            
-                  
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Standard Cost</td>
-            <td>{{form.standardUnitCost}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Unit Price</td>
-              <td>{{form.unitPrice}}</td>
-          
-              </tr>
-          <tr>
-            <td class="allif-fix-table-col">Critical No.</td>
-            <td>{{form.criticalnumber}}</td>
-          </tr>
-        
-          <tr>
-            <td class="allif-fix-table-col">Total Units Sold</td>
-            <td>{{form.total_units_sold}}</td>
-          </tr>
-         
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Warehouse</td>
-            <td>{{form.warehouse}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Normal Range</td>
-            <td>{{form.normal_range}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Units</td>
-            <td>{{form.units}}</td>
-          </tr>   
-           <tr>
-            <td class="allif-fix-table-col">Length</td>
-            <td>{{form.length}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Width</td>
-            <td>{{form.width}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{form.height}}</td>
-          </tr>
-
-           <tr>
-            <td class="allif-fix-table-col">Weight</td>
-            <td>{{form.weight}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Expires On</td>
-            <td>{{form.expires}}</td>
-          </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Stock Item</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      
-     
-    <tr>
-      <td class="allif-fix-table-col">Category</td>
-      <td>{{form.category}}</td>
-  
-      </tr>
-      <tr>
-        <td class="allif-fix-table-col">Inventory A/C</td>
-        <td>{{form.inventory_account}}</td>
-      </tr>
-      <tr>
-        <td class="allif-fix-table-col">Income A/C</td>
-        <td>{{form.income_account}}</td>
-      </tr>
-      <tr>
-        <td class="allif-fix-table-col">Pay From A/C</td>
-        <td>{{form.expense_account}}</td>
-      </tr>
-      <tr>
-        <td class="allif-fix-table-col">Tax Rate</td>
-        <td>{{form.taxrate}}</td>
-      </tr>
-       <tr>
-          <td class="allif-fix-table-col">Supplier Tax Rate</td>
-          <td>{{form.suppliertaxrate}}</td>
-        </tr>
-         <tr>
-            <td class="allif-fix-table-col">Part Number</td>
-            <td>{{form.number}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-             <tr>
-          <td class="allif-fix-table-col">Quantity</td>
-          <td>{{form.quantity}}</td>
-      
-          </tr>
-
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         
-       
-              <tr>
-                <td class="allif-fix-table-col">Buying Price</td>
-                <td>{{form.buyingPrice}}</td>
-            
-                </tr>
-
-                <tr>
-                  <td class="allif-fix-table-col">Unit Cost</td>
-                  <td>{{form.unitcost}}</td>
-              
-                  </tr>
-                  
-              <tr>
-            <td class="allif-fix-table-col">Total Units Sold</td>
-            <td>{{form.total_units_sold}}</td>
-          </tr>
-                <tr>
-            <td class="allif-fix-table-col">Standard Cost</td>
-            <td>{{form.standardUnitCost}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Unit Price</td>
-              <td>{{form.unitPrice}}</td>
-          
-              </tr>
-          <tr>
-            <td class="allif-fix-table-col">Critical No.</td>
-            <td>{{form.criticalnumber}}</td>
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-          </tr>
-        <tr>
-            <td class="allif-fix-table-col">Warehouse</td>
-            <td>{{form.warehouse}}</td>
-          </tr>
-
-          
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         <tr>
-            <td class="allif-fix-table-col">Item State</td>
-            <td>{{form.item_state}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Normal Range</td>
-            <td>{{form.normal_range}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Units</td>
-            <td>{{form.units}}</td>
-          </tr>   
-           <tr>
-            <td class="allif-fix-table-col">Length</td>
-            <td>{{form.length}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Width</td>
-            <td>{{form.width}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{form.height}}</td>
-          </tr>
-
-           <tr>
-            <td class="allif-fix-table-col">Weight</td>
-            <td>{{form.weight}}</td>
-          </tr>
-           <tr>
-            <td class="allif-fix-table-col">Expires On</td>
-            <td>{{form.expires}}</td>
-          </tr>
-
-            <tr>
-
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% endif %}
-
-
-</div>
-
-</div>
-  {% block scripts %}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  <a href="{% allif_get_single_nav_link_url 'Stocks' user_var glblslug %}">Inventory Stocks</a>
+ <a href="{% allif_get_single_nav_link_url 'AddStockItem' user_var glblslug %}">Add Stock Item</a>
 
   {% endblock %}
-   {% endblock %}
+   {% block core-tab-col-one %}
+  <tr>
+      <td class="allif-fix-table-col-forms">Part Number</td>
+      <td>{{form.number}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Description</td>
+      <td>{{form.description}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Item Code</td>
+      <td>{{form.code}}</td>
+    </tr>
    
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+   <tr>
+      <td class="allif-fix-table-col-forms">Quantity</td>
+      <td>{{form.quantity}}</td>
+    </tr>
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Buying Price</td>
+      <td>{{form.buyingPrice}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Unit Cost</td>
+      <td>{{form.unitcost}}</td>
+    </tr>
+   
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Standard Unit Cost</td>
+      <td>{{form.standardUnitCost}}</td>
+    </tr>
+     
+   
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+       <tr>
+      <td class="allif-fix-table-col-forms">Unit Price</td>
+      <td>{{form.unitPrice}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Critical Number</td>
+      <td>{{form.criticalnumber}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Total Units Sold</td>
+      <td>{{form.total_units_sold}}</td>
+    </tr>
+    
+     <tr>
+        <td class="allif-fix-table-col-forms">Inventory A/C</td>
+        <td>{{form.inventory_account}}</td>
+      </tr>
+     <tr>
+        <td class="allif-fix-table-col-forms">Income A/C</td>
+        <td>{{form.income_account}}</td>
+      </tr>
 
    
+    <tr>
+      <td class="allif-fix-table-col-forms">Expense A/C</td>
+      <td>{{form.expense_account}}</td>
+    </tr>
+    
+    <tr>
+      <td class="allif-fix-table-col-forms">Sales Tax</td>
+      <td>{{form.taxrate}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Supplier Tax Rate</td>
+      <td>{{form.suppliertaxrate}}</td>
+    </tr>
+     
+  
+    
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Normal Range</td>
+      <td>{{form.normal_range}}</td>
+    </tr>
+   
+     <tr>
+      <td class="allif-fix-table-col-forms">Units</td>
+      <td>{{form.units}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Length</td>
+      <td>{{form.length}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Width</td>
+      <td>{{form.width}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Height</td>
+      <td>{{form.height}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Weight</td>
+      <td>{{form.weight}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Expires</td>
+      <td>{{form.expires}}</td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col-forms">Item State</td>
+      <td>{{form.item_state}}</td>
+    </tr>
+   
+  
+    {%endblock%}
+{% block bottom-fields-col-one %}
+    
+       <tr>
+      <td class="allif-fix-table-col-forms">Category</td>
+      <td>{{form.category}}</td>
+    </tr>
+    
+      {%endblock%}
+    {% block bottom-fields-col-two %}
+      
+     <tr>
+      <td class="allif-fix-table-col-forms">Warehouse</td>
+      <td>{{form.warehouse}}</td>
+    </tr>
+
+      {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Stocks' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteStockItemConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
