--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stock-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stock-details.html
@@ -1,221 +1,145 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+   <a href="{% allif_get_single_nav_link_url 'Stocks' user_var glblslug %}">Inventory Stocks</a>
+ <a href="{% allif_get_single_nav_link_url 'AddStockItem' user_var glblslug %}">Add Stock Item</a>
 
-<!--start....main headere-->
-<div class="card-header">
+  {%endblock%}
 
-<div class="row mt-12" ><!--start....header row-->
+  {% block details-table-col-one %}
+    <tr>
+      <td class="allif-fix-table-col">Name</td>
+      <td>{{allifquery.name}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col">Description</td>
+      <td>{{allifquery.description}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col">Number</td>
+      <td>{{allifquery.number}}</td>
+    </tr>
 
-<div class="col-md-12"><!--start....header column-->
+     <tr>
+      <td class="allif-fix-table-col">Category</td>
+      <td>{{allifquery.category}}</td>
+    </tr>
+    
+  {%endblock%}
 
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditStockItem' allifquery.id user_var glblslug %}">Edit Item</a></li>
-        
-      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteStockItem' allifquery.id user_var glblslug %}">Delete Item</a></li>
-      
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  {% block details-table-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Quantity</td>
+    <td>{{allifquery.quantity|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+      <td class="allif-fix-table-col">Unit Cost</td>
+      <td>{{allifquery.unitcost|floatformat:2|intcomma}}</td>
+    </tr>
+     <tr>
+    <td class="allif-fix-table-col">Unit Price</td>
+    <td>{{allifquery.unitPrice|floatformat:2|intcomma}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Balance</td>
+    <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
+  </tr>
 
-<a href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
-
-
-</div>
-
-    </div><!--end....header column-->
   
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-     
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{allifquery.branch}}</td>
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{allifquery.department}}</td>
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{allifquery.description}}</td>
-            </tr>
-         
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-                       
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Quantity</td>
-            <td>{{allifquery.quantity|floatformat:2|intcomma}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Unit Cost</td>
-              <td>{{allifquery.unitcost|floatformat:2|intcomma}}</td>
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Unit Price</td>
-                <td>{{allifquery.unitPrice|floatformat:2|intcomma}}</td>
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">Standard Unit Cost</td>
-                  <td>{{allifquery.standardUnitCost|floatformat:2|intcomma}}</td>
-                  </tr>
-                  
-          <tr>
-            <td class="allif-fix-table-col">Buying Price</td>
-            <td>{{allifquery.buyingPrice|floatformat:2|intcomma}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Critical No.</td>
-              <td>{{allifquery.criticalnumber|floatformat:2|intcomma}}</td>
-              </tr>
-               <tr>
-            <td class="allif-fix-table-col">Income A/C</td>
-            <td>{{allifquery.income_account}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Expense A/C</td>
-              <td>{{allifquery.expense_account}}</td>
-              </tr>
-             
-              <tr>
-                <td class="allif-fix-table-col">Inventory A/C</td>
-                <td>{{allifquery.inventory_account}}</td>
-                </tr>
-    
-              </tr>
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          
-        
-          <tr>
-            <td class="allif-fix-table-col">Created By</td>
-            <td>{{allifquery.owner}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Date</td>
-              <td>{{allifquery.date|date:'d/m/Y'}}</td>
-              </tr>
-            
-           
-          <tr>
-            <td class="allif-fix-table-col">Tax Rate</td>
-            <td>{{allifquery.taxrate}}</td>
-        
-        </tr> 
-         <tr>
-            <td class="allif-fix-table-col">Total Units Sold</td>
-            <td>{{allifquery.total_units_sold|floatformat:2|intcomma}}</td>
-        
-        </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Normal Range</td>
-            <td>{{allifquery.normal_range}}</td>
-        
-        </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Expires</td>
-            <td>{{allifquery.expires}}</td>
-        
-        </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Length</td>
-            <td>{{allifquery.length}}</td>
-        
-        </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Width</td>
-            <td>{{allifquery.width}}</td>
-        
-        </tr> 
-          <tr>
-            <td class="allif-fix-table-col">Height</td>
-            <td>{{allifquery.height}}</td>
-        
-        </tr> 
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-</div>
-</div>
-  {% block scripts %}
-
   {% endblock %}
-   {% endblock %}
   
+  {% block core-details-tab-col-one %}
+   <tr>
+    <td class="allif-fix-table-col">Standard Unit Cost</td>
+    <td>{{allifquery.standardUnitCost|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Buying Price</td>
+    <td>{{allifquery.buyingPrice|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Critical Number</td>
+    <td>{{allifquery.criticalnumber|floatformat:2|intcomma}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Income A/C</td>
+    <td>{{allifquery.income_account}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Inventory A/C</td>
+    <td>{{allifquery.inventory_account}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Expense A/C</td>
+    <td>{{allifquery.expense_account}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Sales Tax</td>
+    <td>{{allifquery.taxrate}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Total Units Sold</td>
+    <td>{{allifquery.total_units_sold|floatformat:2|intcomma}}</td>
+  </tr>
+   
+  {%endblock%}
+
+  {% block core-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Expires</td>
+    <td>{{allifquery.expires}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">Normal Range</td>
+    <td>{{allifquery.normal_range}}</td>
+  </tr>
+
+
+
+  <tr>
+    <td class="allif-fix-table-col">Length</td>
+    <td>{{allifquery.length}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Width</td>
+    <td>{{allifquery.width}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Height</td>
+    <td>{{allifquery.height}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Weight</td>
+    <td>{{allifquery.weight}}</td>
+  </tr>
+
+  <tr>
+    <td class="allif-fix-table-col">Date</td>
+    <td>{{allifquery.date|date:'d/m/Y'}}</td>
+  </tr>
+  {% endblock %}
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Stocks' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteStockItemConfirm.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
+
+{% block item_details_related_items_full_half_tables %}
+{%endblock%}
