--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/transfers/add-transfer-order-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/transfers/add-transfer-order-details.html
@@ -1,29 +1,23 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
 
-<div class="allifmaal-main-container">
-  
-<!--start....main headere-->
-<div class="card-header">
+<!-- START... below is for loading contextual dynamic tags and links... used for only contextual links -->
+{% load allif_contextual_action_tags %} {# this helps to put the links where you want and it loads them #}
+{% allif_get_contextual_actions_map allifquery user_var glblslug as allif_contextual_action_links %}
+<!--'allif_contextual_action_links' now holds the dictionary returned by the tag-->
+<!-- END.. -->
 
-<div class="row mt-12" ><!--start....header row-->
+{% load allif_navigation_tags %}
 
-<div class="col-md-12"><!--start....header column-->
+ {% block add-form-header-block %}
 
-<div class="container-fluid amel-content-header">
+ 
 <div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-
+    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Actions
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+      <div class="content-dropdown-menu">
+     
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddTransferOrderDetails' allifquery.id  user_var glblslug %}">Edit Item</a></li>
     
        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddTransferOrderItems' allifquery.id  user_var glblslug %}">Add Item</a></li>
@@ -32,314 +26,101 @@
     
          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTransferOrderPdf' allifquery.id  user_var glblslug %}">Download</a></li>
    
-   <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteTransferOrder' allifquery.id user_var glblslug %}">Delete</a></li>
-   </div>
-  </ul>
-</div>
+        
+    </div>
+    </ul>
+  </div>
 
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonTransferOrders' user_var glblslug %}">Transfer Orders</a>
 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
- </div>
-
+  <a href="{% allif_get_single_nav_link_url 'Transactions' user_var glblslug %}">Transactions</a>
+  <a href="{{ allif_contextual_action_links.commonTransactionDetails.url }}">Transaction Details</a>
+  <a href="{{ allif_contextual_action_links.trfpdf.url }}">Download</a>
+  <a href="{{ allif_contextual_action_links.pomiscosts.url }}">Misc. Costs</a>
  
- <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-
-  {% if messages %}
-  <div class="delete-confirmation-header">
-    {% include 'allifmaalcommonapp/base/error/common_errors.html' %}
-  </div>
-  {% else %}
-
-<div class="table-details-content-description">{{allifquery}}</div>
-
-  {% endif %}
   
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
+ 
+{% if 'commonAddTransactionDetails' in allif_contextual_action_links %}
+    <a href="{{ allif_contextual_action_links.commonAddTransactionDetails.url }}">Refresh</a>
+ 
+{% endif %}
+
+{% if 'AddTriageData' in allif_contextual_action_links %}
+
+<a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage Records</a>
+  <a class="action-button" href="{{ allif_contextual_action_links.AddTriageData.url }}">Add Triage</a>
+  <a class="action-button" href="{{ allif_contextual_action_links.addDoctorAssessment.url }}"> Add Doctor Assessment</a>
+{% else %}
+{% endif %}
+
+{% if 'addExamDetails' in allif_contextual_action_links %} {# Example for a new action name #}
+
+<a class="action-button" href="{{ allif_contextual_action_links.addExamDetails.url }}">New Examination</a>
+ 
+{% else %}
+{% endif %}
+
+{% endblock %}
+
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">TRF Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Description</td>
+      <td>{{form.description}}</td>
+    </tr>
     
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+        
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+     <tr>
+          <td class="allif-fix-table-col-forms">From Warehouse</td>
+          <td>{{form.from_store}}</td>
+        </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">To Warehouse</td>
+      <td>{{form.to_store}}</td>
+    </tr>
+     
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Quantity</td>
+      <td>{{form.quantity}}</td>
+    </tr>
+
+    
+    {%endblock%}
        
-      <tr>
-        <td class="allif-fix-table-col">Company</td>
-        <td>{{allifquery.company}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Division</td>
-          <td> {{allifquery.division}}</td>
+   {% block standard-tab-col-two %}
       
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Branch</td>
-            <td> {{allifquery.branch}}</td>
-        
-            </tr>
-           <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td> {{allifquery.department}}</td>
-        
-            </tr>
-            
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-             
-          <tr>
-            <td class="allif-fix-table-col">Number</td>
-            <td>{{allifquery.number}}</td>
-        
-            </tr>
-           <tr>
-            <td class="allif-fix-table-col">From Store</td>
-            <td>{{allifquery.from_store}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col">To Store</td>
-            <td>{{allifquery.to_store}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{allifquery.comments}}</td>
-        
-            </tr>
-
-           
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Owner</td>
-              <td>{{allifquery.owner}}</td>
-          
-              </tr>
-           <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{allifquery.status}}</td>
-        
-            </tr>
-        
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-
-<hr>
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Invoice Details</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-         
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         <tr>
-            <td class="allif-fix-table-col">From Store</td>
-            <td>{{form.from_store}}</td>
-        
-            </tr>
-          
-              <tr>
-                <td class="allif-fix-table-col">To Store</td>
-                <td>{{form.to_store}}</td>
-            
-                </tr>
-               
-
-          <tr>
-            <td class="allif-fix-table-col">Status</td>
-            <td>{{form.status}}</td>
-        
-            </tr>
-         
-             
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-        <tr>
-        <td class="allif-fix-table-col">Comments</td>
-        <td>{{form.comments}}</td>
-    
-        </tr>
-            
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<hr>
-
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Stock Item</td>
-          <td>Quantity</td>
-         
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.items.id user_var glblslug %}">{{item.items}}</a></td>
-          
-            <td>
-            {{item.quantity}}
-           </td>
-           
-          
+     <tr>
+      <td class="allif-fix-table-col-forms">Balance</td>
+      <td>{{form.balance}}</td>
+    </tr>
   
-         <td> . . . </td>
-         <td></td>
-        </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-<hr>
+       
+    {%endblock%}
 
 
-</div>
-
-</div>
-
-
-  {% block scripts %}
-
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'TransferOrders' user_var glblslug %}">Go Back</a></td>
+    </tr>
   {% endblock %}
-   {% endblock %}
-   
-
-
-
-
-
-
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteTransferOrderConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
 
 
 
